# mec-platform

./: .gitignore  README.md
deploy/ansible/: 5gmeta-mec-platform-playbook.yaml  README.md
deploy/helm/mec-platform-chart/: Chart.yaml  values.yaml
deploy/helm/mec-platform-chart/templates/: apisix-routes-configmap.yaml  cert-manager-issuer.yaml  dashboard-mec-monitoring-configmap.yaml  grafana-configmap.yaml  osm-ingress.yaml
deploy/vagrant/k8s-vim/: Vagrantfile
deploy/vagrant/osm/: 5gmeta-mec-platform-playbook.yaml  Vagrantfile
deploy/vagrant/osm/ansible/: 5gmeta-mec-platform-playbook.yaml  README.md  inventory.ini
grafana-dashboards/: k8s-dashboard.yaml  mec_monitoring.json
security/: connaisseur-values.yaml
src/: README.md
src/apiserver/: Dockerfile  README.md  requirements.txt
src/apiserver/openapi_server/: __main__.py  util.py
src/apiserver/openapi_server/config/: config.py
src/apiserver/openapi_server/controllers/: authorization_controller.py  registration_api_controller.py  types_controller.py
src/apiserver/openapi_server/models/: __init__.py  data_source_info.py  license_info.py
src/apiserver/openapi_server/openapi/: edgeinstance.yaml
src/apiserver/openapi_server/test/: test_instances_controller.py  test_registration_api_controller.py  test_types_controller.py
src/cit-message-quality/src/: CMakeLists.txt  Dockerfile
src/cit-message-quality/src/include/: its.hpp  local_ms_detector.hpp  predictor.hpp
src/cit-message-quality/src/lib/mlw_amqp/include/: MLW_AMQP.hpp
src/cit-message-quality/src/lib/mlw_amqp/include/proton/internal/: config_presets.hpp
src/cit-message-quality/src/resource/: 0.json  3.json  database.txt  default.json
src/cit-message-quality/src/src/: its.cpp  its_utils.cpp  local_ms_detector.cpp  predictor.cpp
src/cit-message-quality/src/test/: CMakeLists.txt
src/cit-message-quality/src/test/src/: addMultipleITSTest.cpp  detectPositionConsistencyTest.cpp
src/cits-message-quality/: README.md
src/cits-message-quality/src/include/: its_utils.hpp
src/cits-message-quality/src/resource/: 1.json  2.json  4.json  5.json
src/cits-message-quality/src/src/: main.cpp
src/edge-apiserver/: .dockerignore  introspection.sh  requirements.txt
src/edge-apiserver/openapi_server/: __main__.py  encoder.py
src/edge-apiserver/openapi_server/config/: config.py
src/edge-apiserver/openapi_server/controllers/: instances_controller.py  registration_api_controller.py
src/llccam/: consumer.py
src/sender/: sender.py
src/utils/: introspection.sh
src/video-broker/: Dockerfile  amqp_manager.py  content.py  launch_gst118.sh  simple_server.py  udpvideo2amqp.py  webrtcRX  webrtc_proxy.py
tests/edge-instance-api/: check_types.sh
tests/edge-instance-api/references/: type.json
tests/message-data-broker/: README.md
tests/registration/: README.md  content.py
tools/: get_mec_location_tile.py  introspection.sh
(+342 files in other folders)
